--- a/project2/src/main/webapp/resources/css/boardinsert.css
+++ b/project2/src/main/webapp/resources/css/boardinsert.css
@@ -54,3 +54,23 @@ tbody{
 	background: black;
 	color:white;
 }
+.insert-button1 button{
+	width: 120px;
+    height: 50px;
+    border: 2px solid lightgray;
+    background: white;
+    border-radius: 15px;
+    font-size: 20px;
+    font-weight: bold;
+    margin: 20px;
+    text-align:center;
+    transition: all 1s;
+    position: relative;
+    left: 40px;
+}
+.form-control{
+	    margin: 10px 0px 15px 0px;
+}
+#image{
+	 margin-bottom: 20px;
+}
