--- a/project2/src/main/webapp/resources/css/login.css
+++ b/project2/src/main/webapp/resources/css/login.css
@@ -59,10 +59,6 @@ body {
     color: gray;
     cursor: pointer;
 }
-.button-bottom4 a{
-	color:gray;
-	text-decoration:none;
-}
 .login-api{
         margin-top: 25px;
         
@@ -72,6 +68,10 @@ body {
 }
 .login-bottom{
 	margin: 20px 0px 0px 0px;
+}
+.login-bottom a{
+	color:gray;
+	text-decoration:none;
 }
 .login-api button{
 	width: 100%; 
