--- a/project2/src/main/webapp/resources/css/boardlist.css
+++ b/project2/src/main/webapp/resources/css/boardlist.css
@@ -22,6 +22,7 @@
     padding: 20px;
     display: inline-flex;
 }
+
 .board-button .new{
 	width: 70px;
     height: 40px;
@@ -30,6 +31,10 @@
     border: 1px solid lightgray;
     background: white;
     font-weight:bold;
+}
+.board-button .new a{
+	color:black;
+	text-decoration:none;
 }
 .board-button .famous{
 	width: 70px;
@@ -40,6 +45,10 @@
     background: black;
     font-weight:bold;
     color:white;
+}
+.board-button .famous a{
+	color:white;
+	text-decoration:none;
 }
 .board-button2 button{
 	width: 150px;
